unpackaged/main/default/objects/ETST_Calendar__c/ETST_Calendar__c.object-meta.xml
<CustomObject>
    <label>Calendar</label>
    <nameField>
        <displayFormat>CADR-{00000}</displayFormat>
        <label>Calendar Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calendars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>