unpackaged/main/default/objects/ETST_Calendar__c/fields/ETST_Academic_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ETST_Academic_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Academic End Date</label>
    <type>Date</type>
</CustomField>