unpackaged/main/default/objects/ETST_Calendar__c/fields/ETST_Active__c.field-meta.xml
<CustomField>
    <fullName>ETST_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>