unpackaged/main/default/objects/ETST_Calendar__c/fields/ETST_School__c.field-meta.xml
<CustomField>
    <fullName>ETST_School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Business (B2B) - School</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Calendars</relationshipLabel>
    <relationshipName>Calendars</relationshipName>
    <type>Lookup</type>
</CustomField>