unpackaged/main/default/objects/ETST_Calendar__c/fields/ETST_School_Id__c.field-meta.xml
<CustomField>
    <fullName>ETST_School_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>School Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>